<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GenerateQrActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textViewGenerateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/agbalumo"
        android:gravity="center"
        android:text="@string/generate_qr"
        android:textColor="#FDD835"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:background="@drawable/text_border"
        android:inputType="text"
        android:textColor="#121212"
        android:textColorHint="#757575"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenerateTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="#121212"
        android:textColorHint="#757575"
        android:background="@drawable/text_border"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="#FF9800"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/imageViewQrCode"
        android:layout_width="261dp"
        android:layout_height="295dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
